# re_partners_nyc_taxi

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pipeline.yml
init-db/: init.sql
notebook/: eda_nyc_taxy_trips.ipynb
src/: ingest_bronze.py  load_gold_to_postgres.py  transform_gold.py
terraform/: main.tf  variables.tf
tests/: test_data_cleaning.py
tests/unit/: test_data_cleaning.py
