[project]
name = "nyc-taxi-mini-pipeline"
version = "0.1.0"
description = "Project to do a ETL from NYC Taxi Trips"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "bigquery>=0.0.45",
    "psycopg2-binary>=2.9.11",
    "pyspark>=4.1.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "flake8>=7.0.0",
]

[tool.uv]
managed = true